gif overflow issue attempt

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -309,6 +309,7 @@ nav {
 	 #section_1_background {
 		 	width: 200%;
 		 	left: -48%;
+		 	overflow: none;
 		}
 }
  @media screen and (max-width: 460px) {	
